# shipshape

./: .gitignore  README.md  pyproject.toml
src/shipshape/: __init__.py
src/shipshape/buoyancy/: __init__.py  __main__.py  solve.py
src/shipshape/gz/: __init__.py  __main__.py  compute.py
src/shipshape/mass/: __init__.py  __main__.py  analyze.py
src/shipshape/parameter/: __init__.py  __main__.py  compute.py
src/shipshape/physics/: __init__.py  __main__.py  center_of_buoyancy.py  center_of_mass.py  geometry.py  geometry_freecad.py
src/shipshape/validate_structure/: __init__.py  __main__.py  aka_analysis.py  aka_point_load.py  beam_mechanics.py  brace_analysis.py  capsize_analysis.py  diagrams.py  gunwale_analysis.py  lifting_sling.py  mast_analysis.py  spine_analysis.py  validate.py  wave_slam.py
