[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipshape"
version = "0.5.0"
description = "Open-source parametric vessel design and validation library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Solar Proa", email = "solar.proa@gmail.com" },
]
keywords = ["naval-architecture", "vessel-design", "hydrostatics", "structural-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
diagrams = ["matplotlib"]
geometry = ["numpy"]  # FreeCAD required but not pip-installable (use conda-forge)

[project.urls]
Homepage = "https://github.com/solar-proa/shipshape"
Repository = "https://github.com/solar-proa/shipshape"
